[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/UI/Menu.gd" type="Script" id=1]
[ext_resource path="res://resources/theme/font/BasicFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://resources/ui/arrow.png" type="Texture" id=3]
[ext_resource path="res://resources/ui/arrow_hover.png" type="Texture" id=4]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/enviroment/BasicTilemap.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/enviroment/Torch.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/enviroment/Box.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/enemies/OrcBasic.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/enviroment/Skull.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/enviroment/Switch.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/UI/TextButton.tscn" type="PackedScene" id=12]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 2

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 1

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 237.0 ]
}

[node name="BasicTilemap" parent="." instance=ExtResource( 6 )]
material = SubResource( 1 )
tile_data = PoolIntArray( 65538, 0, 0, 65539, 0, 1, 65540, 0, 1, 65541, 0, 1, 65542, 0, 1, 65543, 0, 1, 65544, 0, 1, 65545, 0, 1, 65546, 0, 1, 65547, 0, 1, 65548, 0, 1, 65549, 0, 1, 65550, 0, 1, 65551, 0, 1, 65552, 0, 1, 65553, 0, 1, 65554, 0, 1, 65555, 0, 1, 65556, 0, 1, 65557, 0, 1, 65558, 0, 1, 65559, 0, 1, 65560, 0, 1, 65561, 0, 1, 65562, 0, 1, 65563, 0, 2, 131074, 0, 65536, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 65537, 131080, 0, 65537, 131081, 0, 196618, 131082, 0, 65537, 131083, 0, 65537, 131084, 0, 65537, 131085, 0, 65537, 131086, 0, 65537, 131087, 0, 65537, 131088, 0, 65537, 131089, 0, 65537, 131090, 0, 65537, 131091, 0, 65537, 131092, 0, 65537, 131093, 0, 65537, 131094, 0, 65537, 131095, 0, 65537, 131096, 0, 65537, 131097, 0, 65537, 131098, 0, 65537, 131099, 0, 65538, 196610, 0, 65536, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65537, 196614, 0, 65537, 196615, 0, 65537, 196616, 0, 65537, 196617, 0, 65537, 196618, 0, 65537, 196619, 0, 65537, 196620, 0, 262154, 196621, 0, 65537, 196622, 0, 65537, 196623, 0, 65537, 196624, 0, 65537, 196625, 0, 65537, 196626, 0, 65537, 196627, 0, 65537, 196628, 0, 65537, 196629, 0, 65537, 196630, 0, 65537, 196631, 0, 65537, 196632, 0, 65537, 196633, 0, 65537, 196634, 0, 65537, 196635, 0, 65538, 262146, 0, 65536, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 262156, 0, 65537, 262157, 0, 65537, 262158, 0, 65537, 262159, 0, 65537, 262160, 0, 65537, 262161, 0, 65537, 262162, 0, 65537, 262163, 0, 65537, 262164, 0, 65537, 262165, 0, 65537, 262166, 0, 65537, 262167, 0, 65537, 262168, 0, 262154, 262169, 0, 65537, 262170, 0, 65537, 262171, 0, 65538, 327682, 0, 65536, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 65537, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 65537, 327693, 0, 65537, 327694, 0, 65537, 327695, 0, 65537, 327696, 0, 65537, 327697, 0, 65537, 327698, 0, 65537, 327699, 0, 65537, 327700, 0, 65537, 327701, 0, 65537, 327702, 0, 65537, 327703, 0, 65537, 327704, 0, 65537, 327705, 0, 65537, 327706, 0, 65537, 327707, 0, 65538, 393218, 0, 65536, 393219, 0, 262154, 393220, 0, 65537, 393221, 0, 65537, 393222, 0, 65537, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 65537, 393228, 0, 65537, 393229, 0, 65537, 393230, 0, 65537, 393231, 0, 65537, 393232, 0, 262154, 393233, 0, 65537, 393234, 0, 65537, 393235, 0, 65537, 393236, 0, 65537, 393237, 0, 65537, 393238, 0, 65537, 393239, 0, 65537, 393240, 0, 65537, 393241, 0, 65537, 393242, 0, 65537, 393243, 0, 65538, 458754, 0, 65536, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65537, 458758, 0, 65537, 458759, 0, 65537, 458760, 0, 65537, 458761, 0, 65537, 458762, 0, 65537, 458763, 0, 65537, 458764, 0, 65537, 458765, 0, 65537, 458766, 0, 65537, 458767, 0, 65537, 458768, 0, 65537, 458769, 0, 65537, 458770, 0, 65537, 458771, 0, 262154, 458772, 0, 65537, 458773, 0, 262154, 458774, 0, 65537, 458775, 0, 65537, 458776, 0, 65537, 458777, 0, 65537, 458778, 0, 65537, 458779, 0, 65538, 524290, 0, 131072, 524291, 0, 131073, 524292, 0, 131073, 524293, 0, 131073, 524294, 0, 131073, 524295, 0, 131073, 524296, 0, 131073, 524297, 0, 131073, 524298, 0, 131073, 524299, 0, 131073, 524300, 0, 131073, 524301, 0, 131073, 524302, 0, 131073, 524303, 0, 131073, 524304, 0, 131073, 524305, 0, 131073, 524306, 0, 131073, 524307, 0, 131073, 524308, 0, 131073, 524309, 0, 131073, 524310, 0, 131073, 524311, 0, 131073, 524312, 0, 131073, 524313, 0, 131073, 524314, 0, 131073, 524315, 0, 131074, 851947, 0, 0, 851948, 0, 1, 851949, 0, 1, 851950, 0, 2, 917483, 0, 65536, 917484, 0, 65537, 917485, 0, 65537, 917486, 0, 65538, 983019, 0, 65536, 983020, 0, 65537, 983021, 0, 65537, 983022, 0, 65538, 1048555, 0, 131072, 1048556, 0, 131073, 1048557, 0, 131073, 1048558, 0, 131074 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -83.0
margin_top = -102.0
margin_right = 77.0
margin_bottom = -86.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]1"
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="TextureButton" parent="RichTextLabel"]
material = SubResource( 3 )
margin_left = 92.0
margin_top = -1.0
margin_right = 108.0
margin_bottom = 17.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Previous" type="TextureButton" parent="RichTextLabel"]
material = SubResource( 3 )
margin_left = 67.0
margin_top = -1.0
margin_right = 83.0
margin_bottom = 17.0
rect_scale = Vector2( -1, 1 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextButton" parent="." instance=ExtResource( 12 )]
margin_left = 197.0
margin_top = 125.0
margin_right = -203.0
margin_bottom = -131.0

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 160.0
margin_top = 152.0
margin_right = -160.0
margin_bottom = -105.0
rect_pivot_offset = Vector2( 96, 0 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Level "
text = "Level "
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enviroment" type="Node" parent="."]

[node name="Player" parent="Enviroment" instance=ExtResource( 5 )]
position = Vector2( -304, 232 )
disable = true

[node name="Camera2D" parent="Enviroment/Player" index="4"]
current = false

[node name="Torch" parent="Enviroment" instance=ExtResource( 7 )]
position = Vector2( 72, 24 )

[node name="Torch2" parent="Enviroment" instance=ExtResource( 7 )]
position = Vector2( 240, 24 )

[node name="Torch3" parent="Enviroment" instance=ExtResource( 7 )]
position = Vector2( 408, 24 )

[node name="Skull" parent="Enviroment" instance=ExtResource( 10 )]
position = Vector2( 248, 40 )
scale = Vector2( 0.75, 0.75 )

[node name="Skull2" parent="Enviroment" instance=ExtResource( 10 )]
position = Vector2( 232, 40 )
scale = Vector2( 0.75, 0.75 )
is_start_left = false

[node name="Box" parent="Enviroment" instance=ExtResource( 8 )]
position = Vector2( 72, 48 )
scale = Vector2( 0.75, 0.75 )

[node name="Switch" parent="Enviroment" instance=ExtResource( 11 )]
position = Vector2( 408, 48 )
scale = Vector2( 0.75, 0.75 )

[node name="Enemy" parent="Enviroment" instance=ExtResource( 9 )]
position = Vector2( 408, 64 )
scale = Vector2( 0.75, 0.75 )
[connection signal="pressed" from="RichTextLabel/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="RichTextLabel/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="TextButton" to="." method="_on_TextButton_pressed"]

[editable path="Enviroment/Player"]
